--- a/.github/workflows/deployment2.yaml
+++ b/.github/workflows/deployment2.yaml
@@ -12,6 +12,7 @@ jobs:
     - name: Lint
       run: npm run lint
   test:
+    needs: lint
     runs-on: ubuntu-latest
     steps:
     - name: get code
@@ -21,6 +22,7 @@ jobs:
     - name: Test
       run: npm run test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
     - name: get code
